--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -104,9 +104,10 @@
                                 <dt>{{ property.first }}: </dt>
                                 <dd>
                                   {%- if property.last contains '/uploads/' -%}
-                                    <a href="{{ property.last }}" target="_blank">
+                                    {% comment %} <a href="{{ property.last }}" target="_blank">
                                       {{ property.last | split: '/' | last }}
-                                    </a>
+                                    </a> {% endcomment %}
+                                    <img src="{{ property.last | img_url: "master" }}" alt="uploaded" loading="lazy">
                                   {%- else -%}
                                     {{ property.last }}
                                   {%- endif -%}
